--- a/.gitmodules
+++ b/.gitmodules
@@ -1,33 +1,33 @@
-[submodule ".vim/bundle/command-t"]
-	path = .vim/bundle/command-t
+[submodule "dotfiles/.vim/bundle/command-t"]
+	path = dotfiles/.vim/bundle/command-t
 	url = git://git.wincent.com/command-t.git
-[submodule ".vim/bundle/sweet-rspec-vim"]
-	path = .vim/bundle/sweet-rspec-vim
+[submodule "dotfiles/.vim/bundle/sweet-rspec-vim"]
+	path = dotfiles/.vim/bundle/sweet-rspec-vim
 	url = https://github.com/duskhacker/sweet-rspec-vim.git
-[submodule ".vim/bundle/vim-bundler"]
-	path = .vim/bundle/vim-bundler
+[submodule "dotfiles/.vim/bundle/vim-bundler"]
+	path = dotfiles/.vim/bundle/vim-bundler
 	url = git://github.com/tpope/vim-bundler.git
-[submodule ".vim/bundle/vim-coffee-script"]
-	path = .vim/bundle/vim-coffee-script
+[submodule "dotfiles/.vim/bundle/vim-coffee-script"]
+	path = dotfiles/.vim/bundle/vim-coffee-script
 	url = https://github.com/kchmck/vim-coffee-script.git
-[submodule ".vim/bundle/vim-rails"]
-	path = .vim/bundle/vim-rails
+[submodule "dotfiles/.vim/bundle/vim-rails"]
+	path = dotfiles/.vim/bundle/vim-rails
 	url = git://github.com/tpope/vim-rails.git
-[submodule ".vim/bundle/vim-textobj-rubyblock"]
-	path = .vim/bundle/vim-textobj-rubyblock
+[submodule "dotfiles/.vim/bundle/vim-textobj-rubyblock"]
+	path = dotfiles/.vim/bundle/vim-textobj-rubyblock
 	url = https://github.com/nelstrom/vim-textobj-rubyblock.git
-[submodule ".vim/bundle/vim-textobj-user"]
-	path = .vim/bundle/vim-textobj-user
+[submodule "dotfiles/.vim/bundle/vim-textobj-user"]
+	path = dotfiles/.vim/bundle/vim-textobj-user
 	url = https://github.com/kana/vim-textobj-user.git
-[submodule ".vim/bundle/nerdtree"]
-	path = .vim/bundle/nerdtree
+[submodule "dotfiles/.vim/bundle/nerdtree"]
+	path = dotfiles/.vim/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree
-[submodule ".vim/bundle/vim-cucumber"]
-	path = .vim/bundle/vim-cucumber
+[submodule "dotfiles/.vim/bundle/vim-cucumber"]
+	path = dotfiles/.vim/bundle/vim-cucumber
 	url = https://github.com/tpope/vim-cucumber.git
-[submodule ".vim/bundle/ack.vim"]
-	path = .vim/bundle/ack.vim
+[submodule "dotfiles/.vim/bundle/ack.vim"]
+	path = dotfiles/.vim/bundle/ack.vim
 	url = https://github.com/mileszs/ack.vim.git
-[submodule ".vim/bundle/tabular"]
-	path = .vim/bundle/tabular
+[submodule "dotfiles/.vim/bundle/tabular"]
+	path = dotfiles/.vim/bundle/tabular
 	url = https://github.com/godlygeek/tabular.git
