--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "dotfiles/.vim/bundle/vim-ruby-refactoring"]
 	path = dotfiles/.vim/bundle/vim-ruby-refactoring
 	url = https://github.com/ecomba/vim-ruby-refactoring.git
+[submodule "dotfiles/.vim/bundle/dbext.vim"]
+	path = dotfiles/.vim/bundle/dbext.vim
+	url = https://github.com/vim-scripts/dbext.vim.git
