--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "dotfiles/.vim/bundle/vim-ruby-conque"]
 	path = dotfiles/.vim/bundle/vim-ruby-conque
 	url = https://github.com/skwp/vim-ruby-conque.git
+[submodule "dotfiles/.vim/bundle/vim-fugitive"]
+	path = dotfiles/.vim/bundle/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
