--- a/dotfiles/.git-prompt.conf
+++ b/dotfiles/.git-prompt.conf
@@ -10,7 +10,7 @@
 
 # error_bell=off                # sound terminal bell when command return code is not zero. (use setterm to set pitch and duration)
 # max_file_list_length=100      # in characters
-# count_only=off                # off - display file list; on - display file count
+# count_only=on                # off - display file list; on - display file count
 # rawhex_len=5                  # length of git rawhex revision id display (use 0 to hide it)
 
 ############################################################   MODULES
@@ -30,7 +30,7 @@ default_host=madlep                   # remote host is always shown
 
 ###########################################################   Current Working Dir display
 #  cwd_cmd='\w'                 # display full path
-## cwd_cmd='\W'                 # display only last dir of path
+cwd_cmd='\W'                 # display only last dir of path
 ## cwd_cmd='cwd_truncate 40'    # display only last N chars of path
 
 ###########################################################   ETC
