--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "dotfiles/.vim/bundle/vim-fugitive"]
 	path = dotfiles/.vim/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "dotfiles/.vim/bundle/elixir-lang"]
+	path = dotfiles/.vim/bundle/elixir-lang
+	url = https://github.com/elixir-lang/vim-elixir.git
