--- a/dotfiles/.git-prompt.conf
+++ b/dotfiles/.git-prompt.conf
@@ -24,8 +24,8 @@ vim_module=on
 ###########################################################   DEFAULT OBJECTS
 ###  Default objects are not displayed.  Example:
 
-default_user=madlep             
-default_host=madlep                   # remote host is always shown
+default_user=$(whoami)
+default_host=$(hostname)                   # remote host is always shown
 ## default_domain="lvvnet"      
 
 ###########################################################   Current Working Dir display
