--- a/dotfiles/.git-prompt.conf
+++ b/dotfiles/.git-prompt.conf
@@ -25,7 +25,7 @@ vim_module=on
 ###  Default objects are not displayed.  Example:
 
 default_user=$(whoami)
-default_host=$(hostname)                   # remote host is always shown
+default_host=$(hostname -s)                   # remote host is always shown
 ## default_domain="lvvnet"      
 
 ###########################################################   Current Working Dir display
