--- a/dotfiles/.ackrc
+++ b/dotfiles/.ackrc
@@ -2,7 +2,7 @@
 --type-add=html=.html.erb,.html.haml
 --type-add=js=.js.erb
 --type-add=css=.sass
---type-add=elixir=.ex,.exs
+--type-set=elixir=.ex,.exs
 --type-set=cucumber=.feature
 --ignore-dir=vendor
 --ignore-dir=log
