--- a/.gitmodules
+++ b/.gitmodules
@@ -1,60 +1,80 @@
 [submodule "dotfiles/.vim/bundle/command-t"]
 	path = dotfiles/.vim/bundle/command-t
 	url = git://git.wincent.com/command-t.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/sweet-rspec-vim"]
 	path = dotfiles/.vim/bundle/sweet-rspec-vim
 	url = https://github.com/duskhacker/sweet-rspec-vim.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/vim-bundler"]
 	path = dotfiles/.vim/bundle/vim-bundler
 	url = git://github.com/tpope/vim-bundler.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/vim-coffee-script"]
 	path = dotfiles/.vim/bundle/vim-coffee-script
 	url = https://github.com/kchmck/vim-coffee-script.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/vim-rails"]
 	path = dotfiles/.vim/bundle/vim-rails
 	url = git://github.com/tpope/vim-rails.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/vim-textobj-rubyblock"]
 	path = dotfiles/.vim/bundle/vim-textobj-rubyblock
 	url = https://github.com/nelstrom/vim-textobj-rubyblock.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/vim-textobj-user"]
 	path = dotfiles/.vim/bundle/vim-textobj-user
 	url = https://github.com/kana/vim-textobj-user.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/nerdtree"]
 	path = dotfiles/.vim/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/vim-cucumber"]
 	path = dotfiles/.vim/bundle/vim-cucumber
 	url = https://github.com/tpope/vim-cucumber.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/ack.vim"]
 	path = dotfiles/.vim/bundle/ack.vim
 	url = https://github.com/mileszs/ack.vim.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/tabular"]
 	path = dotfiles/.vim/bundle/tabular
 	url = https://github.com/godlygeek/tabular.git
+	ignore = untracked
 [submodule "dotfiles/.git-prompt"]
 	path = dotfiles/.git-prompt
 	url = git://github.com/lvv/git-prompt.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/vim-matchit"]
 	path = dotfiles/.vim/bundle/vim-matchit
 	url = https://github.com/edsono/vim-matchit
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/vim-ruby-refactoring"]
 	path = dotfiles/.vim/bundle/vim-ruby-refactoring
 	url = https://github.com/ecomba/vim-ruby-refactoring.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/dbext.vim"]
 	path = dotfiles/.vim/bundle/dbext.vim
 	url = https://github.com/vim-scripts/dbext.vim.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/vim-conque"]
 	path = dotfiles/.vim/bundle/vim-conque
 	url = https://github.com/rson/vim-conque.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/vim-ruby-conque"]
 	path = dotfiles/.vim/bundle/vim-ruby-conque
 	url = https://github.com/skwp/vim-ruby-conque.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/vim-fugitive"]
 	path = dotfiles/.vim/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/elixir-lang"]
 	path = dotfiles/.vim/bundle/elixir-lang
 	url = https://github.com/elixir-lang/vim-elixir.git
+	ignore = untracked
 [submodule "dotfiles/.vim/bundle/actionscript.vim"]
 	path = dotfiles/.vim/bundle/actionscript.vim
 	url = https://github.com/vim-scripts/actionscript.vim--Leider.git
+	ignore = untracked
