changed name on gitconfig

--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -15,6 +15,6 @@
 	whitespace = tab-in-indent,tabwidth=2
 [user]
 	email = madlep@madlep.com
-	name = madlep
+	name = Julian Doherty (madlep)
 [github]
 	user = madlep
