--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -15,3 +15,46 @@ bind r source-file ~/.tmux.conf
 # quick pane cycling
 unbind ^A
 bind ^A select-pane -t :.+
+
+# copy + paste
+set-option -g default-command "reattach-to-user-namespace -l bash"
+bind-key Y run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+
+# Statusbar settings
+
+# toggle statusbar
+bind-key s set status
+
+# use vi-style key bindings in the status line
+set -g status-keys vi
+
+# amount of time for which status line messages and other indicators
+# are displayed. time is in milliseconds.
+set -g display-time 2000
+
+# default statusbar colors
+set -g status-fg white
+set -g status-bg default
+set -g status-attr dim
+set -g status-interval 1
+
+#
+# default window title colors
+setw -g window-status-fg white
+#setw -g window-status-bg default
+setw -g window-status-attr dim
+
+# active window title colors
+setw -g window-status-current-fg cyan
+#setw -g window-status-current-bg default
+#setw -g window-status-current-attr bright
+setw -g window-status-current-attr underscore
+
+# command/message line colors
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
+
+set -g pane-active-border-fg blue
+set -g pane-border-fg white
+
