--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -2,6 +2,7 @@
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 set-window-option -g mode-mouse on
+set -g default-terminal "screen-256color"
 
 # remap prefix to Control + a
 set -g prefix C-a
