--- a/.gitmodules
+++ b/.gitmodules
@@ -81,3 +81,6 @@
 [submodule "dotfiles/.vim/bundle/Puppet-Syntax-Highlighting"]
 	path = dotfiles/.vim/bundle/Puppet-Syntax-Highlighting
 	url = git://github.com/vim-scripts/Puppet-Syntax-Highlighting.git
+[submodule "dotfiles/.vim/bundle/vim-colors-solarized"]
+	path = dotfiles/.vim/bundle/vim-colors-solarized
+	url = git://github.com/altercation/vim-colors-solarized.git
