--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,5 +1,6 @@
 # use mouse for pane selection/scrolling
 set-option -g mouse-select-pane on
+set-option -g mouse-resize-pane on
 set-option -g mouse-select-window on
 set-window-option -g mode-mouse on
 set -g default-terminal "screen-256color"
