--- a/.gitmodules
+++ b/.gitmodules
@@ -84,3 +84,6 @@
 [submodule "dotfiles/.vim/bundle/vim-colors-solarized"]
 	path = dotfiles/.vim/bundle/vim-colors-solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
+[submodule "dotfiles/.vim/bundle/YouCompleteMe"]
+	path = dotfiles/.vim/bundle/YouCompleteMe
+	url = git://github.com/Valloric/YouCompleteMe.git
