--- a/dotfiles/.ackrc
+++ b/dotfiles/.ackrc
@@ -5,6 +5,7 @@
 --type-set=elixir=.ex,.exs
 --type-set=cucumber=.feature
 --type-set=puppet=.pp
+--type-set=coffee=.coffee
 --ignore-dir=vendor
 --ignore-dir=log
 --ignore-dir=tmp
