--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -10,6 +10,22 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
+# vim movement keys
+unbind-key Up
+unbind-key Down
+unbind-key Left
+unbind-key Right
+bind-key -r k select-pane -U
+bind-key -r j select-pane -D
+bind-key -r h select-pane -L
+bind-key -r l select-pane -R
+
+# use - and | for splitting
+unbind-key "\""
+unbind-key %
+bind-key - split-window
+bind-key | split-window -h
+
 # force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
@@ -60,3 +76,5 @@ set -g message-attr bright
 set -g pane-active-border-fg blue
 set -g pane-border-fg white
 
+# start window numbers at 1
+set -g base-index 1
