bind 'b' to clear pane

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -38,6 +38,9 @@ bind ^A select-pane -t :.+
 set-option -g default-command "reattach-to-user-namespace -l bash"
 bind-key Y run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
+# clear pane
+bind-key b send-keys -R \; clear-history
+
 # Statusbar settings
 
 # toggle statusbar
