--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -70,6 +70,7 @@ setw -g window-status-current-fg cyan
 #setw -g window-status-current-bg default
 #setw -g window-status-current-attr bright
 setw -g window-status-current-attr underscore
+set -g display-panes-time 2000
 
 # command/message line colors
 set -g message-fg white
