--- a/.gitmodules
+++ b/.gitmodules
@@ -87,3 +87,6 @@
 [submodule "dotfiles/.vim/bundle/YouCompleteMe"]
 	path = dotfiles/.vim/bundle/YouCompleteMe
 	url = git://github.com/Valloric/YouCompleteMe.git
+[submodule "dotfiles/.vim/bundle/gitgutter"]
+	path = dotfiles/.vim/bundle/gitgutter
+	url = git://github.com/airblade/vim-gitgutter.git
