--- a/dotfiles/.ackrc
+++ b/dotfiles/.ackrc
@@ -6,6 +6,7 @@
 --type-set=cucumber=.feature
 --type-set=puppet=.pp
 --type-set=coffee=.coffee
+--type-set=markdown=.md,.markdown
 --ignore-dir=vendor
 --ignore-dir=log
 --ignore-dir=tmp
