copy/paste in tmux

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -11,6 +11,7 @@ unbind C-b
 bind C-a send-prefix
 
 # vim movement keys
+setw -g mode-keys vi
 unbind-key Up
 unbind-key Down
 unbind-key Left
@@ -20,10 +21,19 @@ bind-key -r j select-pane -D
 bind-key -r h select-pane -L
 bind-key -r l select-pane -R
 
+# vim copy/paste
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
 # use - and | for splitting
 unbind-key "\""
 unbind-key %
 bind-key - split-window
+bind-key _ split-window
 bind-key | split-window -h
 
 # force a reload of the config file
