add git lg alias for pretty log

--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -2,6 +2,7 @@
 	br = branch -a
 	co = checkout
 	st = status
+	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cd) %C(bold blue)<%an>%Creset' --abbrev-commit
 [apply]
 	ignorewhitespace = change
 [color]
