make tmux ctrl-a work

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -8,7 +8,7 @@ set -g default-terminal "screen-256color"
 # remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
-bind C-a send-prefix
+bind-key C-a send-prefix
 
 # vim movement keys
 setw -g mode-keys vi
