--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -8,7 +8,7 @@ set -g default-terminal "screen-256color"
 # remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
-bind-key C-a send-prefix
+bind-key a send-prefix
 
 # vim movement keys
 setw -g mode-keys vi
@@ -41,8 +41,8 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 # quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
+# unbind ^A
+# bind ^A select-pane -t :.+
 
 # copy + paste
 set-option -g default-command "reattach-to-user-namespace -l bash"
