make tmux rememeber path when splitting

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -32,9 +32,11 @@ bind-key -t vi-copy 'y' copy-selection
 # use - and | for splitting
 unbind-key "\""
 unbind-key %
-bind-key - split-window
-bind-key _ split-window
-bind-key | split-window -h
+bind-key - split-window -c "#{pane_current_path}"
+bind-key _ split-window -c "#{pane_current_path}"
+
+bind-key | split-window -h -c "#{pane_current_path}"
+
 
 # force a reload of the config file
 unbind r
