--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -66,31 +66,40 @@ set -g status-keys vi
 set -g display-time 2000
 
 # default statusbar colors
-set -g status-fg white
-set -g status-bg default
-set -g status-attr dim
-set -g status-interval 1
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
 
+set -g status-interval 1
+set -g status-justify centre
+set -g status-left-length 20
+setw -g window-status-attr dim
 #
 # default window title colors
-setw -g window-status-fg white
-#setw -g window-status-bg default
-setw -g window-status-attr dim
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
 
 # active window title colors
-setw -g window-status-current-fg cyan
-#setw -g window-status-current-bg default
-#setw -g window-status-current-attr bright
-setw -g window-status-current-attr underscore
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
 set -g display-panes-time 2000
 
-# command/message line colors
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
 
-set -g pane-active-border-fg blue
-set -g pane-border-fg white
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
 
 # start window numbers at 1
 set -g base-index 1
