--- a/dotfiles/.git-prompt.conf
+++ b/dotfiles/.git-prompt.conf
@@ -89,7 +89,7 @@ vcs_ignore_dir_list="$HOME"
 #           untracked_vcs_color=BLUE      # Untracked files:
 #                  op_vcs_color=MAGENTA
 #            detached_vcs_color=RED
-#                 hex_vcs_color=BLACK	  # git revision id:  bright black (makes gray)
+                  hex_vcs_color=green	  # git revision id:  bright black (makes gray)
 
 
 # :vim:ft=sh ts=8 sw=8 et:
