--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -10,16 +10,13 @@ set -g prefix C-a
 unbind C-b
 bind-key a send-prefix
 
-# vim movement keys
-setw -g mode-keys vi
-unbind-key Up
-unbind-key Down
-unbind-key Left
-unbind-key Right
-bind-key -r k select-pane -U
-bind-key -r j select-pane -D
-bind-key -r h select-pane -L
-bind-key -r l select-pane -R
+# from https://github.com/christoomey/vim-tmux-navigator
+# Smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # vim copy/paste
 unbind [
