--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,8 +1,7 @@
 # use mouse for pane selection/scrolling
-set-option -g mouse-select-pane on
-set-option -g mouse-resize-pane on
-set-option -g mouse-select-window on
-set-window-option -g mode-mouse on
+set-option -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+
 set -g default-terminal "screen-256color"
 
 # remap prefix to Control + a
