--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -43,7 +43,7 @@ bind r source-file ~/.tmux.conf
 # bind ^A select-pane -t :.+
 
 # copy + paste
-set-option -g default-command "reattach-to-user-namespace -l bash"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 bind-key Y run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
 # clear pane
