stop windows being renamed when commands run

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -71,6 +71,9 @@ set-window-option -g window-status-fg colour244 #base0
 set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
+# don't rename window to running command
+set-option -g allow-rename off
+
 # active window title colors
 set-window-option -g window-status-current-fg colour166 #orange
 set-window-option -g window-status-current-bg default
