--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -97,3 +97,6 @@ set-window-option -g clock-mode-colour colour64 #green
 
 # start window numbers at 1
 set -g base-index 1
+
+# right status message
+set-option -g status-right "#[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d"
