--- a/dotfiles/Brewfile
+++ b/dotfiles/Brewfile
@@ -26,6 +26,7 @@ brew "erlang"
 brew "exenv"
 brew "elixir-build"
 brew "git"
+brew "httpie"
 brew "reattach-to-user-namespace"
 brew "tmux"
 brew "vim"
