--- a/dotfiles/Brewfile
+++ b/dotfiles/Brewfile
@@ -21,6 +21,7 @@ cask "caskroom/versions/java8"
 
 cask "caskroom/fonts/font-inconsolata-for-powerline"
 
+brew "ag"
 brew "ctags"
 brew "elasticsearch", restart_service: :changed
 brew "erlang"
