use tmuxp (with python) rather than tmuxomatic for managing tmux

--- a/dotfiles/Brewfile
+++ b/dotfiles/Brewfile
@@ -30,6 +30,7 @@ brew "elixir-build"
 brew "git"
 brew "httpie"
 brew "postgresql", restart_service: :changed
+brew "pyenv"
 brew "nvm"
 brew "reattach-to-user-namespace"
 brew "rustup-init"
