--- a/dotfiles/Brewfile
+++ b/dotfiles/Brewfile
@@ -34,6 +34,7 @@ brew "postgresql", restart_service: :changed
 brew "pyenv"
 brew "nvm"
 brew "reattach-to-user-namespace"
+brew "redis", restart_service: :changed
 brew "rustup-init"
 brew "tmux"
 brew "vim"
