--- a/dotfiles/Brewfile
+++ b/dotfiles/Brewfile
@@ -4,6 +4,7 @@ mas "1Password", id: 443987910
 mas "Airmail 3", id: 918858936
 mas "Day One", id: 1055511498
 mas "Moom", id: 419330170
+mas "Pixelmator", id: 407963104
 mas "Pocket", id: 568494494
 mas "Reeder", id: 880001334
 mas "Slack", id: 803453959
