--- a/dotfiles/Brewfile
+++ b/dotfiles/Brewfile
@@ -21,6 +21,7 @@ cask "google-chrome"
 cask "iterm2"
 cask "little-snitch"
 cask "sublime-text"
+cask "vlc"
 
 cask "caskroom/fonts/font-inconsolata-for-powerline"
 
