use hugo instead of gutenberg

--- a/dotfiles/Brewfile
+++ b/dotfiles/Brewfile
@@ -36,9 +36,9 @@ brew "elixir-build"
 brew "exercism"
 brew "figlet"
 brew "git"
-brew "gutenberg"
 brew "heroku"
 brew "httpie"
+brew "hugo"
 brew "postgresql", restart_service: :changed
 brew "pyenv"
 brew "nvm"
