--- a/dotfiles/Brewfile
+++ b/dotfiles/Brewfile
@@ -13,6 +13,7 @@ mas "Slack", id: 803453959
 mas "Things", id: 904280696
 mas "Tweetbot for Twitter", id: 557168941
 
+cask "aws-vault"
 cask "bartender"
 cask "caskroom/versions/java8"
 cask "dropbox"
