--- a/dotfiles/Brewfile
+++ b/dotfiles/Brewfile
@@ -11,6 +11,7 @@ mas "Reeder", id: 880001334
 mas "Slack", id: 803453959
 mas "Things", id: 904280696
 
+cask "alfred"
 cask "aws-vault"
 cask "bartender"
 cask "caskroom/versions/java8"
