--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -68,7 +68,7 @@ set -g display-time 2000
 set -g status-interval 1
 set -g status-justify centre
 set -g status-left-length 20
-setw -g window-status-attr dim
+setw -g window-status-style dim
 
 
 # don't rename window to running command
@@ -87,25 +87,20 @@ set-option -g status-right "#[fg=black,bg=default]%a%l:%M:%S %p#[default] #[fg=b
 # default statusbar colors
 set-option -g status-bg white #base2
 set-option -g status-fg yellow #yellow
-set-option -g status-attr default
+set-option -g status-style default
 
 # default window title colors
-set-window-option -g window-status-fg brightyellow #base00
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
+set-window-option -g window-status-style fg=brightyellow,bg=default,dim
 
 # active window title colors
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style fg=brightred,bg=default,bright
 
 # pane border
-set-option -g pane-border-fg white #base2
-set-option -g pane-active-border-fg brightcyan #base1
+set-option -g pane-border-style fg=white
+set-option -g pane-active-border-style fg=brightcyan
 
 # message text
-set-option -g message-bg white #base2
-set-option -g message-fg brightred #orange
+set-option -g message-style bg=white,fg=brightred
 
 # pane number display
 set-option -g display-panes-active-colour blue #blue
